[tool.poetry]
name = "pytorch-advanced"
version = "0.1.0"
description = ""
authors = ["n4okins <naoki.jsdf.jj@gmail.com>"]
readme = "README.md"
packages = [{include = "pytorch_advanced"}]

[tool.poetry.dependencies]
python = "^3.10"
jupyter = "^1.0.0"
torch = "^1.13.1"
torchvision = "^0.14.1"
pillow = "^9.3.0"
numpy = "^1.24.1"
matplotlib = "^3.6.2"
tqdm = "^4.64.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
