[tool.poetry]
name = "machine-learning-advanced"
version = "0.1.0"
description = ""
authors = ["n4okins <n4okins.developer@gmail.com>"]
readme = "README.md"
packages = [
    {include = "machine-learning-advanced"},
    {include = "nprch", from = "nprch"},
    {include = "jarch", from = "jarch"},
    {include = "datautils", from = "datautils"}
]

[tool.poetry.dependencies]
python = "^3.10"
jupyter = "^1.0.0"
torch = "=1.13.1+cu117"
torchvision = "=0.14.1+cu117"
torchaudio = "=0.13.1+cu117"
jax = "^0.4.1"
pillow = "^9.3.0"
numpy = "^1.24.1"
matplotlib = "^3.6.2"
tqdm = "^4.64.1"
cupy-cuda11x = "^11.4.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
